[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm_mujoco"
version = "0.2.0"
authors = [{name = "Enactic, Inc."}]
description = "MuJoCo Description Files (MJCF) for OpenArm"
license = {text = "Apache-2.0"}
maintainers = [{name = "Enactic, Inc."}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.6.0",
    "numpy",
]

[tool.setuptools]
packages = ["openarm_mujoco_v2"]

[tool.setuptools.package-data]
openarm_mujoco_v2 = [
    "*.xml",
    "assets/**/*",
]
